--- a/app/views/reviews/_show.html.erb
+++ b/app/views/reviews/_show.html.erb
@@ -1,13 +1,11 @@
-<ul class="list-group">
-  <% reviews.each do |review| %>
-  <li class="list-group-item">
-    <% 5.times do |i| %>
-      <% unless i < review.rating %>
-      <i class="fa fa-star"></i>
-      er <% else %>
-      <i class="fa fa-star-o"></i>
-    <% end %>
-    <% end %>
-  </li>
+<li class="list-group-item">
+  <% 5.times do |i| %>
+    <% if i < review.rating %>
+    <i class="fa fa-star"></i>
+    <% else %>
+    <i class="fa fa-star-o"></i>
   <% end %>
-</ul>
+  <% end %>
+  :
+  <%= review.content %>
+</li>
